further cleanup of method calls